# mastering-python

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  about_logging.ipynb  exceptions.ipynb  pyproject.toml  ruff_testing.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
azure-queue/: quickstart.ipynb
infrastructure/terraform/: main.tf  terraform-pipeline.yml  terraform.tfvars  versions.tf
logging/: Dockerfile  README.md  pyproject.toml
logging/research/: about_logging.ipynb  telemetry.ipynb
logging/src/: entrypoint.sh  main.py
logging/src/pages/: 01_telemetry.py
scripts/: check_tfvars.py
tests/: unit_tests.ipynb
tests/assert_methods/: calculations.py  prime_v2.py  test_age.py  test_calculations.py  test_collection.py  test_custom.py  test_iseven.py  test_prime_v1.py  test_vehicles.py
tests/fixtures/: employee.py  test_stack.py
tests/mocks/: test_weekday.py  weekday.py
