[project]
name = "mastering-python"
version = "0.1.0"
description = "A project to demonstrate some of the best practices in python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-monitor-opentelemetry>=1.7.0",
    "azure-storage-queue>=12.13.0",
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pre-commit>=4.2.0",
    "streamlit>=1.48.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "ruff>=0.11.8",
]

# checkout: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
exclude = [".git", "__pycache__", ".venv"]
select = [
    "I", # isort
]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"                 # like in black
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "auto"                   # can be also number
